--- a/app/templates/store.hbs
+++ b/app/templates/store.hbs
@@ -1,3 +1,150 @@
-{{partial "partials/header"}}
-{{partial "partials/apps"}}
-{{partial "partials/footer"}}
+<main class="body">
+<br>
+<div class="grid fixed">
+    <div class="row">
+        {{partial "partials/store/categories"}}
+        <div class="srv_XsRefineControl hidden xs-col-1-1">
+            <div class="srv_refine-list refine-list">
+                <div class="refine-list-title h2">
+                    Refine results
+                    <div class="srv_XsRefineClose pull-right visible-xs btn btn-default">X</div>
+                </div>
+                <div class="refine-list-clear">
+                    <a href="./appicons/Category Drill-In.html" data-bi-name="RefineListClear">Clear filters</a>
+                </div>
+                <div class="panel">
+                    <div class="panel-heading" role="tab" id="refine-list-heading-0-1">
+                        <h4 class="panel-title">
+                        <a data-toggle="collapse" href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps#refine-list-0-1" aria-expanded="true" aria-controls="refine-list-0-1" data-bi-name="Cat0" data-bi-slot="1">
+                            <i class="icon-expand"></i>
+                            <i class="icon-collapse"></i>
+                            Category
+                        </a>
+                        </h4>
+                    </div>
+                    <div class="panel-footer">
+                        <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps#">Business</a>
+                    </div>
+                    <div id="refine-list-0-1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="refine-list-heading-0-1" aria-expanded="true">
+                        <div class="list-group">
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/books%20-%20reference?rank=ProductSearchApps" class="list-group-item" data-bi-name="Books &amp; reference" data-bi-slot="0">Books &amp; reference</a>
+                            <a href="./appicons/Category Drill-In.html" class="list-group-item" data-bi-name="Business" data-bi-slot="1">Business</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/developer%20tools?rank=ProductSearchApps" class="list-group-item" data-bi-name="Developer tools" data-bi-slot="2">Developer tools</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/education?rank=ProductSearchApps" class="list-group-item" data-bi-name="Education" data-bi-slot="3">Education</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/entertainment?rank=ProductSearchApps" class="list-group-item" data-bi-name="Entertainment" data-bi-slot="4">Entertainment</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/government%20-%20politics?rank=ProductSearchApps" class="list-group-item" data-bi-name="Government &amp; politics" data-bi-slot="5">Government &amp; politics</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/health%20-%20fitness?rank=ProductSearchApps" class="list-group-item" data-bi-name="Health &amp; fitness" data-bi-slot="6">Health &amp; fitness</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/kids%20-%20family?rank=ProductSearchApps" class="list-group-item" data-bi-name="Kids &amp; family" data-bi-slot="7">Kids &amp; family</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/lifestyle?rank=ProductSearchApps" class="list-group-item" data-bi-name="Lifestyle" data-bi-slot="8">Lifestyle</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/food%20-%20dining?rank=ProductSearchApps" class="list-group-item" data-bi-name="Food &amp; dining" data-bi-slot="9">Food &amp; dining</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/multimedia%20design?rank=ProductSearchApps" class="list-group-item" data-bi-name="Multimedia design" data-bi-slot="10">Multimedia design</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/medical?rank=ProductSearchApps" class="list-group-item" data-bi-name="Medical" data-bi-slot="11">Medical</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/navigation%20-%20maps?rank=ProductSearchApps" class="list-group-item" data-bi-name="Navigation &amp; maps" data-bi-slot="12">Navigation &amp; maps</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/news%20-%20weather?rank=ProductSearchApps" class="list-group-item" data-bi-name="News &amp; weather" data-bi-slot="13">News &amp; weather</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/personal%20finance?rank=ProductSearchApps" class="list-group-item" data-bi-name="Personal Finance" data-bi-slot="14">Personal finance</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/personalization?rank=ProductSearchApps" class="list-group-item" data-bi-name="Personalization" data-bi-slot="15">Personalisation</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/photo%20-%20video?rank=ProductSearchApps" class="list-group-item" data-bi-name="Photo &amp; video" data-bi-slot="16">Photo &amp; video</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/productivity?rank=ProductSearchApps" class="list-group-item" data-bi-name="Productivity" data-bi-slot="17">Productivity</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/security?rank=ProductSearchApps" class="list-group-item" data-bi-name="Security" data-bi-slot="18">Security</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/shopping?rank=ProductSearchApps" class="list-group-item" data-bi-name="Shopping" data-bi-slot="19">Shopping</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/social?rank=ProductSearchApps" class="list-group-item" data-bi-name="Social" data-bi-slot="20">Social</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/travel?rank=ProductSearchApps" class="list-group-item" data-bi-name="Travel" data-bi-slot="21">Travel</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/utilities%20-%20tools?rank=ProductSearchApps" class="list-group-item" data-bi-name="Utilities &amp; tools" data-bi-slot="22">Utilities &amp; tools</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel">
+                    <div class="panel-heading" role="tab" id="refine-list-heading-1-1">
+                        <h4 class="panel-title">
+                        <a data-toggle="collapse" href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps#refine-list-1-1" aria-expanded="true" aria-controls="refine-list-1-1" data-bi-name="Cat1" data-bi-slot="2">
+                            <i class="icon-expand"></i>
+                            <i class="icon-collapse"></i>
+                            Subcategory
+                        </a>
+                        </h4>
+                    </div>
+                    <div class="panel-footer">
+                        <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps#">All</a>
+                    </div>
+                    <div id="refine-list-1-1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="refine-list-heading-1-1" aria-expanded="true">
+                        <div class="list-group">
+                            <a href="./appicons/Category Drill-In.html" class="list-group-item" data-bi-name="All" data-bi-slot="0">All</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&cat2=accounting%20-%20finance" class="list-group-item" data-bi-name="Accounting &amp; finance" data-bi-slot="1">Accounting &amp; finance</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&cat2=collaboration" class="list-group-item" data-bi-name="Collaboration" data-bi-slot="2">Collaboration</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&cat2=crm" class="list-group-item" data-bi-name="CRM" data-bi-slot="3">CRM</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&cat2=data%20-%20analytics" class="list-group-item" data-bi-name="Data &amp; analytics" data-bi-slot="4">Data &amp; analytics</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&cat2=file%20management" class="list-group-item" data-bi-name="File management" data-bi-slot="5">File management</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&cat2=legal%20-%20hr" class="list-group-item" data-bi-name="Legal &amp; HR" data-bi-slot="6">Legal &amp; HR</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&cat2=inventory%20-%20logistics" class="list-group-item" data-bi-name="Inventory &amp; logistics" data-bi-slot="7">Inventory &amp; logistics</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&cat2=project%20management" class="list-group-item" data-bi-name="Project management" data-bi-slot="8">Project management</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&cat2=remote%20desktop" class="list-group-item" data-bi-name="Remote desktop" data-bi-slot="9">Remote desktop</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&cat2=sales%20-%20marketing" class="list-group-item" data-bi-name="Sales &amp; marketing" data-bi-slot="10">Sales &amp; marketing</a>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&cat2=time%20-%20expenses" class="list-group-item" data-bi-name="Time &amp; expenses" data-bi-slot="11">Time &amp; expenses</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="m-col-16-24 l-col-18-24 l-col-24-offset-1 searchResults">
+            <header class="section-header row">
+                <div class="col-1-1">
+                    <h2 class="section-title">
+                    Business in App
+                    </h2>
+                    <div class="srv_rank">
+                        <div class="inline-block">
+                            <div class="body-tight form-control-static inline-block">
+                                Sort by:
+                            </div>
+                            <div class="srv_searchRank dropdown form-control-static inline-block" data-bi-area="DrillRank" data-bi-view="dropdown" data-bi-source="DisplayCatalog">
+                                <button id="Sort by:" class="btn btn-dropdown" type="button" data-toggle="dropdown" data-bi-name="SearchRankSortBy" aria-haspopup="true" aria-expanded="false" role="button">
+                                <span class="body-tight">
+                                    Relevancy<i class="caret"></i>
+                                </span>
+                                </button>
+                                <ul class="srv_searchRankList dropdown-menu" role="menu" aria-labelledby="Sort by:">
+                                    <li class="body-tight active">
+                                        <a href="./appicons/Category Drill-In.html" data-key="ProductSearchApps" data-bi-name="ProductSearchApps">Relevancy</a>
+                                    </li>
+                                    <li class="body-tight ">
+                                        <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=TopRatedApps" data-key="TopRatedApps" data-bi-name="TopRatedApps">Rating</a>
+                                    </li>
+                                    <li class="body-tight ">
+                                        <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=NewRisingApps" data-key="NewRisingApps" data-bi-name="NewRisingApps">Popularity</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps#" class="srv_XsRefineAction visible-xs-inline body-tight form-control-static">Refine results</a>
+                        </div>
+                    </div>
+                </div>
+                </header>
+                <div class="srv_drillin-results row" data-bi-area="DrillResults" data-bi-view="12rowX6col" data-bi-source="DisplayCatalog">
+                    {{#each app in model}}
+                        {{partial "partials/app" itemController="app"}}
+                    {{/each}}
+                </div>
+                <nav>
+                    <ul class="srv_pagingBar pagination">
+                        <li class="active"><a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps#" data-bi-name="PagingPageNumber-1">1 <span class="sr-only">(current)</span></a></li>
+                        <li>
+                            <a class="cli_pageLink" data-bi-name="PagingPageNumber-2" data-skip-items="72" href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&s=store&skipItems=72">2</a>
+                        </li>
+                        <li>
+                            <a class="cli_pageLink" data-bi-name="PagingPageNumber-3" data-skip-items="144" href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&s=store&skipItems=144">3</a>
+                        </li>
+                        <li>
+                            <a class="cli_pageLink" data-bi-name="PagingPageNumber-4" data-skip-items="216" href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&s=store&skipItems=216">4</a>
+                        </li>
+                        <li>
+                            <a href="https://unistorefd-int.www.microsoft.com/en-us/store/apps/business?rank=ProductSearchApps&s=store&skipItems=72" class="cli_pageLink" aria-label="Next" data-bi-name="PagingArrowNext" data-skip-items="72">
+                                <span aria-hidden="true"><i class="icon-carousel-right"></i></span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+</main>
+
