add lorem ipsum image for pdp

--- a/app/templates/pdp.hbs
+++ b/app/templates/pdp.hbs
@@ -21,7 +21,7 @@
                     <div class="tab-content m-col-22-24">
                         <!-- Begin One UI Item Template -- Media Browser - Tab Content Item -->
                         <div role="tabpanel" class="tab-pane fade\ in active" id="media-browser-0">
-                            <img src="./Netflix - Microsoft Store_files/apps.5532.9007199266246365.34779db2-a578-4b4b-b709-374c9e5b9b83.f7419f36-1982-44c1-b89f-9681f178c87e" class="img-responsive" alt="Show detail">
+                            <img src="{{ScreenShot}}" class="img-responsive" alt="Show detail">
                         </div>
                         <!-- Begin One UI Item Template -- Media Browser - Tab Content Item -->
                         <div role="tabpanel" class="tab-pane fade\" id="media-browser-1">
