--- a/app/templates/pdp.hbs
+++ b/app/templates/pdp.hbs
@@ -36,8 +36,8 @@
             </div>
             <div class="m-col-16-24 l-col-14-24 m-col-24-offset-1 l-col-24-offset-1">
                 <div class="row">
-                    <div class="xs-col-2-24 s-col-3-24 m-col-6-24 l-col-5-24">
-                        <img class="cli_image img-responsive" src="{{ImageSource}}" style="background-color: #FFFFFF">
+                    <div class="xs-col-2-24 s-col-3-24 m-col-6-24 l-col-5-24 cli_image_container">
+                        <img class="cli_image img-responsive" src="{{ImageSource}}" style="background-color: #FFFFFF" data-app-id="{{id}}">
                     </div>
                     <div class="xs-col-4-24 s-col-9-24 m-col-18-24 l-col-19-24">
                         <h1 id="page-title" class="header-small page-heading" itemprop="name">{{Title}}</h1>
