fix related apps images

--- a/app/templates/partials/pdp/-relatedapps.hbs
+++ b/app/templates/partials/pdp/-relatedapps.hbs
@@ -9,7 +9,7 @@
                 <figure class="media">
                     <div class="media-img ratio-1-1">
                         <a href="https://onestore.dev.microsoft.com/en-us/store/apps/zapposcom/9wzdncrfj074" data-bind="attr: { href: Target }">
-                            <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Zappos.com" src="./Netflix - Microsoft Store_files/apps.50516.9007199266249313.5e977994-df4c-4925-a75e-eb4c4cc6fa70.92dc0704-100c-4ad8-a4db-2d01b2b1b48f" style="background-color: #7299C6">
+                            <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Zappos.com" src="//store-images.microsoft.com/image/apps.50516.9007199266249313.5e977994-df4c-4925-a75e-eb4c4cc6fa70.92dc0704-100c-4ad8-a4db-2d01b2b1b48f" style="background-color: #7299C6">
                         </a>
                     </div>
                     <figcaption class="media-caption">
@@ -46,7 +46,7 @@
             <figure class="media">
                 <div class="media-img ratio-1-1">
                     <a href="https://onestore.dev.microsoft.com/en-us/store/apps/mobilehd-media-player/9wzdncrfj088" data-bind="attr: { href: Target }">
-                        <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="mobile.HD Media Player" src="./Netflix - Microsoft Store_files/apps.62785.9007199266249295.e35d1e31-21a3-45ba-bc5b-7f4e958fde25.cc0668bd-da07-47c9-bdd2-a22b004fd32d" style="background-color: #aa0c70">
+                        <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="mobile.HD Media Player" src="//store-images.microsoft.com/image/apps.62785.9007199266249295.e35d1e31-21a3-45ba-bc5b-7f4e958fde25.cc0668bd-da07-47c9-bdd2-a22b004fd32d" style="background-color: #aa0c70">
                     </a>
                 </div>
                 <figcaption class="media-caption">
@@ -83,13 +83,13 @@
         <figure class="media">
             <div class="media-img ratio-1-1">
                 <a href="https://onestore.dev.microsoft.com/en-us/store/apps/nextgen-reader/9wzdncrfj262" data-bind="attr: { href: Target }">
-                    <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Nextgen Reader" src="./Netflix - Microsoft Store_files/apps.37575.9007199266242697.48431558-4686-49c0-b87d-447191c07e56.29c70dc1-0806-4e14-b37a-8e89ab0532d9" style="background-color: #008299">
+                    <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Nextgen Reader" src="//store-images.microsoft.com/image/apps.37575.9007199266242697.48431558-4686-49c0-b87d-447191c07e56.29c70dc1-0806-4e14-b37a-8e89ab0532d9" style="background-color: #008299">
                 </a>
             </div>
             <figcaption class="media-caption">
             <h4 class="media-header media-header-clamp-2">
             <a class="item-block" data-bind="text: Title, attr: { href: Target }" href="https://onestore.dev.microsoft.com/en-us/store/apps/nextgen-reader/9wzdncrfj262">Nextgen Reader</a>
-            </h4>
+            </h4>   
             <div class="media-subheader"></div>
             
             <div class="media-price">$2.99</div>
@@ -120,7 +120,7 @@
     <figure class="media">
         <div class="media-img ratio-1-1">
             <a href="https://onestore.dev.microsoft.com/en-us/store/apps/engadget/9wzdncrfhw2r" data-bind="attr: { href: Target }">
-                <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Engadget" src="./Netflix - Microsoft Store_files/apps.30544.9007199266248336.9bea54a2-4b39-4a61-9bc3-0273d118fd52.02338b2c-c916-479e-b1e2-44768cd5c042" style="background-color: #1e82ad">
+                <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Engadget" src="//store-images.microsoft.com/image/apps.30544.9007199266248336.9bea54a2-4b39-4a61-9bc3-0273d118fd52.02338b2c-c916-479e-b1e2-44768cd5c042" style="background-color: #1e82ad">
             </a>
         </div>
         <figcaption class="media-caption">
@@ -157,7 +157,7 @@
 <figure class="media">
     <div class="media-img ratio-1-1">
         <a href="https://onestore.dev.microsoft.com/en-us/store/apps/rbc-canada/9wzdncrfj9wd" data-bind="attr: { href: Target }">
-            <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="RBC Canada" src="./Netflix - Microsoft Store_files/apps.49084.9007199266251885.3a5f203a-7d54-4f3d-bbc6-54c607fb28b9.bdddeacb-9ab6-451e-8869-ce4a75c7185c" style="background-color: #2B4174">
+            <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="RBC Canada" src="//store-images.microsoft.com/image/apps.49084.9007199266251885.3a5f203a-7d54-4f3d-bbc6-54c607fb28b9.bdddeacb-9ab6-451e-8869-ce4a75c7185c" style="background-color: #2B4174">
         </a>
     </div>
     <figcaption class="media-caption">
@@ -193,7 +193,7 @@
 <figure class="media">
 <div class="media-img ratio-1-1">
     <a href="https://onestore.dev.microsoft.com/en-us/store/apps/bookviser-reader/9wzdncrfj02g" data-bind="attr: { href: Target }">
-        <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Bookviser Reader" src="./Netflix - Microsoft Store_files/apps.35258.9007199266249501.2ee7d9dd-abb2-46e6-9535-0e85f86191e3.6cb68702-3e57-4c5c-b7ad-82bcebad2c17" style="background-color: #95c142">
+        <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Bookviser Reader" src="//store-images.microsoft.com/image/apps.35258.9007199266249501.2ee7d9dd-abb2-46e6-9535-0e85f86191e3.6cb68702-3e57-4c5c-b7ad-82bcebad2c17" style="background-color: #95c142">
     </a>
 </div>
 <figcaption class="media-caption">
@@ -229,7 +229,7 @@
 <figure class="media">
 <div class="media-img ratio-1-1">
 <a href="https://onestore.dev.microsoft.com/en-us/store/apps/the-weather-channel/9wzdncrfhwsd" data-bind="attr: { href: Target }">
-    <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="The Weather Channel" src="./Netflix - Microsoft Store_files/apps.9017.9007199266247655.0c7193b7-817d-4d8a-8d3d-c7395a221e39.a97f97ad-6df0-4841-a71b-b8f34754de69" style="background-color: #2D4FCE">
+    <img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="The Weather Channel" src="//store-images.microsoft.com/image/apps.9017.9007199266247655.0c7193b7-817d-4d8a-8d3d-c7395a221e39.a97f97ad-6df0-4841-a71b-b8f34754de69" style="background-color: #2D4FCE">
 </a>
 </div>
 <figcaption class="media-caption">
@@ -263,7 +263,7 @@
 <figure class="media">
 <div class="media-img ratio-1-1">
 <a href="https://onestore.dev.microsoft.com/en-us/store/apps/lenovo-quickcast/9wzdncrfj4mw" data-bind="attr: { href: Target }">
-<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Lenovo QuickCast" src="./Netflix - Microsoft Store_files/apps.40444.9007199266245618.2232af3b-561a-45fa-a536-6f761d3a368b.32f049c1-d351-403d-83de-054141630dc4" style="background-color: #585858">
+<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Lenovo QuickCast" src="//store-images.microsoft.com/image/apps.40444.9007199266245618.2232af3b-561a-45fa-a536-6f761d3a368b.32f049c1-d351-403d-83de-054141630dc4" style="background-color: #585858">
 </a>
 </div>
 <figcaption class="media-caption">
@@ -297,7 +297,7 @@
 <figure class="media">
 <div class="media-img ratio-1-1">
 <a href="https://onestore.dev.microsoft.com/en-us/store/apps/wwe/9wzdncrfhzvz" data-bind="attr: { href: Target }">
-<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="WWE" src="./Netflix - Microsoft Store_files/apps.54867.9007199266248882.588f5c63-bbd5-4a27-953c-465cd749a40a.cabdd30a-3e3a-4fd4-8d50-3863e40be0eb" style="background-color: #222222">
+<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="WWE" src="//store-images.microsoft.com/image/apps.54867.9007199266248882.588f5c63-bbd5-4a27-953c-465cd749a40a.cabdd30a-3e3a-4fd4-8d50-3863e40be0eb" style="background-color: #222222">
 </a>
 </div>
 <figcaption class="media-caption">
@@ -331,7 +331,7 @@
 <figure class="media">
 <div class="media-img ratio-1-1">
 <a href="https://onestore.dev.microsoft.com/en-us/store/apps/endomondo/9wzdncrfj9wk" data-bind="attr: { href: Target }">
-<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Endomondo" src="./Netflix - Microsoft Store_files/apps.5287.9007199266251880.cefed4e4-6643-4f2a-a5f5-8c3f6795714a.6287007a-ffd2-42f4-9f4c-ae161bc706fe" style="background-color: #62a101">
+<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Endomondo" src="//store-images.microsoft.com/image/apps.5287.9007199266251880.cefed4e4-6643-4f2a-a5f5-8c3f6795714a.6287007a-ffd2-42f4-9f4c-ae161bc706fe" style="background-color: #62a101">
 </a>
 </div>
 <figcaption class="media-caption">
@@ -365,7 +365,7 @@
 <figure class="media">
 <div class="media-img ratio-1-1">
 <a href="https://onestore.dev.microsoft.com/en-us/store/apps/rms-viewer/9wzdncrfjcc4" data-bind="attr: { href: Target }">
-<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="RMS Viewer" src="./Netflix - Microsoft Store_files/apps.42826.9007199266251597.4c011af0-46e7-4951-a1ce-3ef1395d7738.d21710de-cb62-4b79-b281-178f29689b53" style="background-color: #2C619C">
+<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="RMS Viewer" src="//store-images.microsoft.com/image/apps.42826.9007199266251597.4c011af0-46e7-4951-a1ce-3ef1395d7738.d21710de-cb62-4b79-b281-178f29689b53" style="background-color: #2C619C">
 </a>
 </div>
 <figcaption class="media-caption">
@@ -399,7 +399,7 @@
 <figure class="media">
 <div class="media-img ratio-1-1">
 <a href="https://onestore.dev.microsoft.com/en-us/store/apps/nick/9wzdncrfhvnc" data-bind="attr: { href: Target }">
-<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Nick" src="./Netflix - Microsoft Store_files/apps.62554.9007199266248676.82af975d-7358-432d-a6a9-176162b96fb7.9c820fa5-0d0d-49ba-9ad5-5375cdd27eba" style="background-color: #FFFFFF">
+<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Nick" src="//store-images.microsoft.com/image/apps.62554.9007199266248676.82af975d-7358-432d-a6a9-176162b96fb7.9c820fa5-0d0d-49ba-9ad5-5375cdd27eba" style="background-color: #FFFFFF">
 </a>
 </div>
 <figcaption class="media-caption">
@@ -433,7 +433,7 @@
 <figure class="media">
 <div class="media-img ratio-1-1">
 <a href="https://onestore.dev.microsoft.com/en-us/store/apps/tube-player/9wzdncrfjcb2" data-bind="attr: { href: Target }">
-<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Tube Player" src="./Netflix - Microsoft Store_files/apps.3313.9007199266251629.73a6ab6a-a456-4db8-aecd-074b0aad61b2.1d2711ec-5dfc-4a99-96a3-3bd68fe2da38" style="background-color: #A82400">
+<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Tube Player" src="//store-images.microsoft.com/image/apps.3313.9007199266251629.73a6ab6a-a456-4db8-aecd-074b0aad61b2.1d2711ec-5dfc-4a99-96a3-3bd68fe2da38" style="background-color: #A82400">
 </a>
 </div>
 <figcaption class="media-caption">
@@ -467,7 +467,7 @@
 <figure class="media">
 <div class="media-img ratio-1-1">
 <a href="https://onestore.dev.microsoft.com/en-us/store/apps/great-british-chefs/9wzdncrfj35h" data-bind="attr: { href: Target }">
-<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Great British Chefs" src="./Netflix - Microsoft Store_files/apps.11605.9007199266245638.f878538b-a6cf-414e-86fc-3cc41735e892.12ee423f-d6ab-4902-83b7-495f1a29b16f" style="background-color: #000000">
+<img class="cli_image" data-bind="attr: { src: Image.ImageUri }, style: { backgroundColor: Image.BgColor }" alt="Great British Chefs" src="//store-images.microsoft.com/image/apps.11605.9007199266245638.f878538b-a6cf-414e-86fc-3cc41735e892.12ee423f-d6ab-4902-83b7-495f1a29b16f" style="background-color: #000000">
 </a>
 </div>
 <figcaption class="media-caption">
