--- a/app/templates/pdp.hbs
+++ b/app/templates/pdp.hbs
@@ -2,7 +2,7 @@
 
 <meta name="ms.product" content="{&quot;id&quot;:&quot;9WZDNCRFJ3TJ&quot;,&quot;name&quot;:&quot;Netflix&quot;,&quot;source&quot;:&quot;DisplayCatalog&quot;,&quot;category&quot;:&quot;Apps&quot;}">
 <div class="srv_itemDetails" data-target="ms-windows-store2://pdp/?productid=9WZDNCRFJ3TJ&amp;referrer=unistoreweb&amp;muid=38331CECDC2A6E95321B1BDCDA2A6E7E&amp;websession=930039844CDF48D1A8ABE23CF353CDDC" data-bi-area="AppDetails" data-bi-view="Desc-BuyOptions-RatingsReviews" data-bi-source="DisplayCatalog" data-bi-product="9WZDNCRFJ3TJ">
-<div class="page-header" data-bi-name="{{Title}}" data-bi-slot="1" data-bi-id="{{id}}">
+<div class="page-header" data-bi-name="{{model.Title}}" data-bi-slot="1" data-bi-id="{{model.id}}">
     
     <div class="grid fixed">
         <div class="row">
@@ -21,7 +21,7 @@
                     <div class="tab-content m-col-22-24">
                         <!-- Begin One UI Item Template -- Media Browser - Tab Content Item -->
                         <div role="tabpanel" class="tab-pane fade\ in active" id="media-browser-0">
-                            <img src="{{ScreenShot}}" class="img-responsive" alt="Show detail">
+                            <img src="{{model.ScreenShot}}" class="img-responsive" alt="Show detail">
                         </div>
                         <!-- Begin One UI Item Template -- Media Browser - Tab Content Item -->
                         <div role="tabpanel" class="tab-pane fade\" id="media-browser-1">
@@ -37,10 +37,10 @@
             <div class="m-col-16-24 l-col-14-24 m-col-24-offset-1 l-col-24-offset-1">
                 <div class="row">
                     <div class="xs-col-2-24 s-col-3-24 m-col-6-24 l-col-5-24 cli_image_container">
-                        <img class="cli_image img-responsive" src="{{ImageSource}}" style="background-color: #FFFFFF" data-app-id="{{id}}">
+                        <img class="cli_image img-responsive" src="{{model.ImageSource}}" style="background-color: #FFFFFF" data-app-id="{{model.id}}">
                     </div>
                     <div class="xs-col-4-24 s-col-9-24 m-col-18-24 l-col-19-24">
-                        <h1 id="page-title" class="header-small page-heading" itemprop="name">{{Title}}</h1>
+                        <h1 id="page-title" class="header-small page-heading" itemprop="name">{{model.Title}}</h1>
                         <div>
                             <a href="http://www.netflix.com/" target="_blank" data-bi-name="Publisher Site">Netflix, Inc.</a>
                         </div>
